Fix tooltip display on inactive buttons on IE

--- a/src/scss/japan.scss
+++ b/src/scss/japan.scss
@@ -67,6 +67,7 @@
       color: #FFF;
       background: #dedede;
       cursor: default;
+      overflow: visible;
     }
   }
   .down {
